--- a/css/style.css
+++ b/css/style.css
@@ -15,3 +15,14 @@ body {
 .data-info_cell {
 	padding: 5px 20px;
 }
+
+
+.data-table__info {
+	position: absolute;
+	left: 0;
+	top: 0;
+	padding: 10px;
+	background: rgba(0,0,0,.4);
+	color: #fff;
+	/*display: none;*/
+}
